--- a/src/index.html
+++ b/src/index.html
@@ -4,5 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=\, initial-scale=1.0" />
   </head>
-  <body></body>
+  <body>
+    <div id="player-content"></div>
+    <div id="bot-content"></div>
+  </body>
 </html>
