Create functionality to stop clicks after win

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=\, initial-scale=1.0" />
   </head>
   <body>
+    <div style="display: flex; flex-direction: column; gap: 5px; width: 6rem">
+      <button id="restart-btn">Restart Game</button>
+      <button id="random-btn">Randomise</button>
+    </div>
     <div id="player-content"></div>
     <div id="bot-content"></div>
   </body>
