Complete all logic of the game

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,7 @@
   </head>
   <body>
     <div style="display: flex; flex-direction: column; gap: 5px; width: 6rem">
-      <button id="restart-btn">Restart Game</button>
-      <button id="random-btn">Randomise</button>
+      <button id="restart-btn">Restart or Randomise</button>
     </div>
     <div id="player-content"></div>
     <div id="bot-content"></div>
