--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,13 @@
     <div style="display: flex; flex-direction: column; gap: 5px; width: 6rem">
       <button id="restart-btn">Restart or Randomise</button>
     </div>
-    <div id="player-content"></div>
-    <div id="bot-content"></div>
+    <div>
+      <h2 style="text-align: center; margin-bottom: 1rem">Players Board</h2>
+      <div id="player-content"></div>
+    </div>
+    <div>
+      <h2 style="text-align: center; margin-bottom: 1rem">Bots Board</h2>
+      <div id="bot-content"></div>
+    </div>
   </body>
 </html>
